@@ -1,3 +1,11 @@
+2008-03-07  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline:
+	2008-03-05  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/35472
+	* gcc.c-torture/execute/pr35472.c: New testcase.
+
 2008-03-06  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
